# lets-git-the-metrics

./: Cargo.toml  flake.nix
src/: main.rs
